# rlibv2

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  README.md  common.hpp  marshal.hpp  memory.hpp  pre_connector.hpp  qp_config.hpp  qp_factory.hpp  rc.hpp  rdma_ctrl.hpp  rnic.hpp  roadmap  rpc_handler.hpp  simple_rpc.hpp  sync_to_server.sh  ud.hpp  util.hpp
benchs/: README.md  bench.cmake  bench_client.cc  bench_main.cc  bench_server.cc  reporter.hh  statics.hh
benchs/db_bench/: client.cc
benchs/dc_bench/: client.cc  dc_server.cc
benchs/fly_bench/: client.cc
benchs/or_bench/: client.cc
core/: cm.hh  common.hh  ctrl.hh  lib.hh  naming.hh  nic.hh  nicinfo.hh  rctrl.hh  rdmaio.hh  result.hh  rnic.hh
core/bootstrap/: channel.hh  handler.hh  multi_msg.hh  multi_msg_iter.hh  proto.hh  sender.hh  srpc.hh  tcp.hh  udp.hh
core/qps/: abs_recv_allocator.hh  config.hh  dc.hh  doorbell_helper.hh  factory.hh  impl.hh  mod.hh  op.hh  rc.hh  rc.hpp  rc_recv_manager.hh  recv_helper.hh  recv_iter.hh  ud.hh
core/rmem/: config.hh  factory.hh  handler.hh  mem.hh  memory.hpp
core/rpc/: proto.hh  sender.hh  tcp.hh  timer.hh
core/utils/: abs_factory.hh  ipname.hh  marshal.hh  mod.hh  option.hh
docs/: INSTALL.md  run_examples.md
docs/benchs/: TUTORIALS.md  performance.md  ro_performance.md
docs/examples/: TUTORIALS.md
examples/: exp.cmake  qp_test.cc  rnic.cc  simple_connect.cc
examples/rc_overflow/: client.cc  server.cc
examples/rc_pingpong/: client.cc  server.cc
examples/ud_overflow/: client.cc  server.cc
examples/ud_pingpong/: client.cc  server.cc
scripts/: bench.toml  bootstrap.py  make.toml  sync_to_server.sh
scripts/benchs/: make.toml
scripts/benchs/rw_bench/: run.toml
tests/: sample.cc  test_channel.cc  test_cm.cc  test_device.cc  test_marshal.cc  test_mem.cc  test_mmsg.cc  test_nicinfo.cc  test_op.cc  test_qp_progress.cc  test_rc.cc  test_rc_send.cc  test_rc_send_cm.cc  test_rpc.cc  test_tcp.cc  test_ud.cc  tests.cmake
